--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.5",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1379.0",
+    "formidable": "^2.1.1",
+    "formidable-serverless": "^1.1.1",
+    "mongoose": "^7.1.1",
     "next": "13.4.2",
+    "openai": "^3.2.1",
+    "pdfjs-dist": "^2.16.105",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
+    "slugify": "^1.6.6",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2"
   }
 }
